# lm-fairytale

./: .gitignore  CMakeLists.txt  Makefile  README.md
checkpoints/: bigram.pt  bigram_cuda.pt  transformer.pt  transformer1.pt  transformer2.pt  transformer_spm_bpe_1024.pt  transformer_spm_bpe_1024_1.pt
src/: data_prep_main.cpp  test_attention_main.cpp  test_embeddings_main.cpp  test_feedforward_main.cpp  test_multihead_attention_main.cpp  test_sentencepiece_main.cpp  test_transformer_block_main.cpp  test_transformer_lm_main.cpp  train_bigram_main.cpp  train_transformer_main.cpp  train_transformer_spm_main.cpp
src/data/: char_tokenizer.cpp  char_tokenizer.h  corpus.cpp  corpus.h  sequence_dataset.cpp  sequence_dataset.h  sp_tokenizer.cpp  sp_tokenizer.h
src/inference/: sampler.h  transformer_sampler.h
src/models/: bigram_lm.h  embeddings.h  feedforward.h  self_attention.h  transformer_block.h  transformer_lm.h
src/train/: batching.h  bigram_trainer.h  transformer_trainer.h
